Cleanup, use java 17 features, reduce usage of deprecated methods